# pmr-market-simulator

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DRAW.md  LICENSE  NOTICE  README.md
include/: event.hpp  order_book.hpp  pmr_utils.hpp  simulator.hpp  storage.hpp
include/msim/: box_muller.hpp  event.hpp  event_convert.hpp  flat_hash.hpp  grpc_storage.hpp  lmdb_reader.hpp  lmdb_storage.hpp  order_book.hpp  rng.hpp  simulator.hpp  spsc_ring.hpp  storage.hpp
proto/: market.proto
scripts/: bench.sh  bench_all.sh  bench_summarize.py  run.sh
src/: collector_server.cpp  lmdb_reader.cpp  lmdb_storage.cpp  main.cpp  order_book.cpp  pmr_utils.cpp  simulator.cpp  storage.cpp
tests/: CMakeLists.txt  order_book_test.cpp  spsc_ring_test.cpp
